k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
      istio-injection: enabled
  name: word-spreads
