k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-spreads-backend-svc
  labels:
    app: word-spreads-backend-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    k8s-app: word-spreads-backend
