k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: word-spreads-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: word-spreads-vs
spec:
  hosts:
    - "*"
  gateways:
    - word-spreads-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: word-spreads-backend-svc
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: word-spreads-frontend-svc
            port:
              number: 3000
